# climate-sentiment-analyzer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pages/: 1_Analyzer.py  2_Batch.py  3_Trends.py
src/climate_analyzer/: __init__.py  analyzer.py  data.py  models.py
tests/: test_analyzer.py  test_models.py
