[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-sentiment-analyzer"
version = "1.0.0"
description = "NLP pipeline for real-time sentiment analysis of climate & sustainability news"
authors = [{ name = "Man Patel", email = "manpatel266@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["nlp", "sentiment-analysis", "climate", "streamlit", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Repository = "https://github.com/manpatell/climate-sentiment-analyzer"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_analyzer"]
